--- a/RupBNB/RupBNB.csproj
+++ b/RupBNB/RupBNB.csproj
@@ -155,7 +155,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ApartmentsController.cs" />
     <Compile Include="Controllers\DBController.cs" />
+    <Compile Include="Controllers\HostsController.cs" />
+    <Compile Include="Controllers\ReviewsController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -165,6 +169,7 @@
     <Compile Include="Models\DAL\ReviewServices.cs" />
     <Compile Include="Models\DAL\SqlConnect.cs" />
     <Compile Include="Models\DAL\UploadDBServices.cs" />
+    <Compile Include="Models\DAL\UserServices.cs" />
     <Compile Include="Models\Host.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\User.cs" />
