--- a/RupBNB/RupBNB.csproj
+++ b/RupBNB/RupBNB.csproj
@@ -223,6 +223,7 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Scripts\apartments.js" />
     <Content Include="Scripts\header.js" />
+    <Content Include="Scripts\loginScript.js" />
     <Content Include="Scripts\seeApart.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
