build user profile page
* display users info
* display users past and future reservations
* add button to see apartments details from users reservation

--- a/RupBNB/RupBNB.csproj
+++ b/RupBNB/RupBNB.csproj
@@ -227,6 +227,7 @@
     <Content Include="Scripts\header.js" />
     <Content Include="Scripts\loginScript.js" />
     <Content Include="Scripts\seeApart.js" />
+    <Content Include="Scripts\userProfilePage.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
