Revert "Merge branch 'main' of https://github.com/rupcgroup4/Airbnb"
This reverts commit eaafcb91714c0fc5cd5953d6a7b0d1fd034f4a50, reversing
changes made to 3dd483c1900e34d014ee20d9e8b7a95ef68adf5e.

--- a/RupBNB/RupBNB.csproj
+++ b/RupBNB/RupBNB.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\ApartmentsController.cs" />
+    <Compile Include="Controllers\DBController.cs" />
     <Compile Include="Controllers\HostsController.cs" />
     <Compile Include="Controllers\LikedApartmentsController.cs" />
     <Compile Include="Controllers\ReservationsController.cs" />
@@ -203,6 +204,7 @@
     <Content Include="images\verified.jpg" />
     <Content Include="Pages\adminView.html" />
     <Content Include="Pages\index.html" />
+    <Content Include="Pages\createDB.html" />
     <Content Include="Pages\invoice.html" />
     <Content Include="Pages\login.html" />
     <Content Include="Pages\notFound.html" />
